syntax = "proto3";

package merchantBasic;

//generate pb.go file
//protoc --go_out=plugins=grpc:. ./proto/*.proto
option go_package = "./proto;proto";
option php_namespace = "Omy\\Crius\\MerchantBasicServer";

message RoomTypeGroup {
    string id = 1;
    string name = 2;
}

message GetRoomTypeGroupsResponse{
    int32 error_code = 1;
    string error_message = 2;
    repeated RoomTypeGroup data = 3;
}

message GetRoomTypeGroupsByRoomTypeIDRequest{
    string room_type_id = 1;
}